- SQL dump for PostgreSQL was added to products_catalogue sample
- products_catalogue' SQL dump for MySQL was renamed to db_dump_mysql.sql
- P4A_Quote_SQL_Value() global function was removed
- P4A_DB::quote() method was added (it's a wrapper for Zend_DB quote method)
- P4A_DB::get*(), fetch*(), query*() methods now support the binding params array

2.99.8
- some minor changes were done after strict validation checks
- products_catalogue sample now has a "date" field to play with
- a bug with empty values in P4A_Tables (passed to formatters) was solved
- P4A_I18N::format() and normalize() methods now returns an empty string if
  no value is passed
- P4A_Validate_NotEmpty::isValid() method now correctly handles the "0" string
  (which is a Zend Framework bug but we create a workaround for it)
- P4A_I18N::translate() methods returns an empty string if nothing is passed
- minor documentation updates were done on P4A_DB_Source
- Zend Framework was updated to 1.5.1
- P4A_Field::getAsMulticheckbox() and getAsRadio() methods now use 
  P4A_Generate_Widget_Layout_Table() global function to render labels and inputs
- P4A_Field::getAsDate()'s input is now "readonly"
- a bug with P4A_I18N::format() method managing dates was solved
  (forcing format to YYYY-MM-dd)

2.99.7
- a bug with disabled P4A_Field::getAsCheckbox() was solved
- P4A_Field::getAsRadio()'s CSS was modified a bit
- P4A_Fieldset's legend is now auto translated on getAsString()
- P4A_Menu's items are now auto translated on getAsString()
- P4A_Mask's title is now auto translated on getAsString()
- P4A_Table's headers names are now auto translated on getAsString()
- P4A_Mask's title is now automatically generated using ucfirst() function instead of ucwords()
- P4A_I18N::mergeTranslation() method was added
- products catalogue sample application was changed for simplicity (SQL structure also)
- products catalogue sample application multilanguage support was added